@@ -139,6 +139,7 @@ enum item_flags
 	DONT_RENDER			= 16,		// BG: completely invisible.
 	SI_ON_MOVING_BARGE	= 17,		// SI's version of 10?
 	TEMPORARY			= 18,		// Is temporary - this means that the item will be deleted once the party gets beyond a certain range from it (outside the superchunk?)
+	SAILOR				= 20,		// The barge's 'captain'.
 	OKAY_TO_LAND		= 21,		// Used for flying-carpet.
 	BG_DONT_MOVE		= 22,		// BG version of SI's DONT_MOVE
 	IN_DUNGEON			= 23,		// Pretty sure. if set, you won't be accused of stealing food.
